--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 <body>
   <div class="container">
     <h1>Electoral College Map</h1>
+
     <div class="controls">
       <button id="dem-btn">Democrat</button>
       <button id="rep-btn">Republican</button>
       <button id="tossup-btn">Tossup</button>
     </div>
+
     <div class="counter">
       <span class="dem">Democrat: <span id="dem-count">0</span></span>
       <span class="rep">Republican: <span id="rep-count">0</span></span>
       <span class="tossup">Tossup: <span id="tossup-count">538</span></span>
     </div>
+
     <object id="map" type="image/svg+xml" data="map.svg"></object>
     <p>Click a state to cycle through party gradients.</p>
   </div>
-  <script src="script.js"></script>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
