--- a/folder/index.html
+++ b/folder/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interactive Electoral College Map</title>
+  <title>Electoral College Map</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -23,6 +23,7 @@
     </div>
 
     <object id="map" type="image/svg+xml" data="map.svg"></object>
+
     <p>Click a state to cycle through party gradients.</p>
   </div>
 
