--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <button class="party-btn" id="tossup-btn">Tossup</button>
   </div>
 
-  <div class="counter">
-    <span class="dem">Democrat: <span id="dem-count">0</span></span>
-    <span class="rep">Republican: <span id="rep-count">0</span></span>
-    <span class="tossup">Tossup: <span id="tossup-count">538</span></span>
-  </div>
+  <div class="counter-bar">
+  <div id="tossup-bar" class="segment tossup-segment"><span id="tossup-count">538</span></div>
+  <div id="dem-bar" class="segment dem-segment"><span id="dem-count">0</span></div>
+  <div id="rep-bar" class="segment rep-segment"><span id="rep-count">0</span></div>
+  <div class="marker-270"></div>
+</div>
 
   <!-- 🔁 Inline map.svg content here -->
   <div id="svg-container">
