--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <button class="party-btn" id="tossup-btn">Tossup</button>
   </div>
 
-  <div class="counter-bar">
-  <div id="tossup-bar" class="segment tossup-segment"><span id="tossup-count">538</span></div>
-  <div id="dem-bar" class="segment dem-segment"><span id="dem-count">0</span></div>
-  <div id="rep-bar" class="segment rep-segment"><span id="rep-count">0</span></div>
-  <div class="marker-270"></div>
+  <div class="bar-container">
+  <div class="bar-segment tossup" id="tossup-bar"><span id="tossup-count">538</span></div>
+  <div class="bar-segment democrat" id="dem-bar"><span id="dem-count">0</span></div>
+  <div class="bar-segment republican" id="rep-bar"><span id="rep-count">0</span></div>
+  <div class="bar-marker" id="bar-270"></div>
 </div>
 
   <!-- 🔁 Inline map.svg content here -->
