--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="map-container">
-    <object id="map" type="image/svg+xml" data="map.svg"></object>
+    <embed id="map" src="map.svg" type="image/svg+xml" />
   </div>
 
   <script src="script.js"></script>
